# TinyToolRL

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: LEARNING_GUIDE.zh-CN.md  RESULTS.md  TECHNICAL_REPORT.md
outputs/probe_sft/: checkpoint.pt  example_trace.json  final_metrics.json  train_metrics.jsonl
outputs/quickstart/: summary.json
outputs/quickstart/dpo/: checkpoint.pt  example_trace.json  final_metrics.json  train_metrics.jsonl
outputs/quickstart/rl/: checkpoint.pt  eval_metrics.jsonl  example_trace.json  final_metrics.json  train_metrics.jsonl
outputs/quickstart/sft/: checkpoint.pt  example_trace.json  final_metrics.json  train_metrics.jsonl
scripts/: demo_agent.py  run_quickstart.py
src/scirl/: __init__.py  agent.py  data.py  evaluate.py  model.py  plot_results.py  reward.py  tasks.py  tokenizer.py  tools.py  train_dpo.py  train_rl.py  train_sft.py  utils.py
tests/: test_core.py
