[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scirl-agent"
version = "0.1.0"
description = "Small-scale RL post-training for tool-using scientific agents."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

